--- a/02Shape/index.html
+++ b/02Shape/index.html
@@ -10,12 +10,44 @@
   <body>
     <a-scene background="color: #333333">
       <a-box id="myBox"
-        width="1"
-        height="0.5"
+        width="5"
+        height="1"
         depth="1"
-        color="#BBAA33" 
+        color="#99ffd1"
+        position="0 1 -7"
+        rotation="0 -30 0"
         shadow>
       </a-box>
+
+      <a-octahedron id="myOctahedron"
+      color="#ffe77a" 
+      radius="1"
+      position="4 1.5 -5"
+      rotation="0 120 100"
+      shadow>
+      </a-octahedron>
+
+      <a-text value="Alexandra's world!"
+      color="#c799ff" 
+      position="0 3 -5"
+      shadow> 
+      </a-text>
+
+      <a-sphere 
+      color="#ff99dd" 
+      radius="0.5"
+      position="-2 2 -4"
+      shadow>
+      </a-sphere>
+
+      <a-plane 
+      color="#938aff" 
+      height="20" 
+      width="200"
+      rotation="-90 0 0"
+      shadow>
+    </a-plane>
+
     </a-scene>
   </body>
 </html>
