--- a/04Animation/index.html
+++ b/04Animation/index.html
@@ -25,17 +25,25 @@
         animation="property: rotation; 
                    to: 90 360 180; 
                    dur: 2000; 
+                   dir: alternate;
                    easing: linear; 
                    loop: true" >
       </a-box>
       <a-box id="myOtherBox" 
-        position="2 1 -3" 
+        position="2 3 -3" 
         rotation="0 45 0" 
         width="3" 
         height="1" 
         depth="1" 
         material="src: #wood2"
-        shadow>  
+        shadow
+        animation="property: position; 
+                   to: 2 1 -3;
+                   dir: alternate;
+                   dur: 800; 
+                   easing: easeInQuad;
+                   elasticity: 400;
+                   loop: true" >
       </a-box>
       <a-plane id="ground"
         position="0 0 -4" 
